--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,131 @@
-.wrapper, .background {
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-  form {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .form{
-    width: 900px;
-    display: flex;
-    color:white;
-    flex-direction: column;
-    padding:0;
-    border-radius: 10px;
-    box-shadow: 0px 10px 50px #555;
-    background-color: #ffffff;
-    position: relative;
-  }
-  .Header{
-    background: gray;
-    padding:50px;
-    border-radius: 10px;
-  }
-  #formbody{
-    padding:50px;
-  }
-  
+p, div {
+  font-family: Lato;
+}
+
+/* 
+  Colors:
+  https://coolors.co/22223b-4a4e69-eadae4-9a8c98-c9ada7 
+*/
+/*
+YANKEES BLUE: #22223B
+INDEPENDENCE: #4A4E69
+PLATINUM: #EADAE4
+SPANISH GRAY: #9A8C98
+SILVER PINK: #C9ADA7
+*/
+
+
+
+/* .form-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 280px;
+  max-width: 80%;
+  min-width: 100px;
+  min-height: 400px;
+  padding: 20px 40px;
+  border-radius: 6px;
+  box-shadow: 0px 8px 36px lightblue;
+  background-color: #fefefe;
+} */
+
+/* .form-wrapper > h2 {
+  display: flex;
+  justify-content: center;
+  font-family: "Segoe UI", "Ubuntu", "Roboto", "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 2em;
+  font-weight: lighter;
+  margin-top: 0.25em;
+  color: #222;
+} */
+
+form {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.info {
+  padding-bottom: 1em;
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
+label {
+  margin-bottom: 0.5em;
+  color: #444;
+  font-weight: lighter;
+  padding-left: 0.70em;
+}
+.fName{
+  padding-top: 3em;
+
+}
+
+
+input {
+  width: 500px;
+  padding: 10px ;
+  border-radius: 5px;
+  outline: none;
+  border: 1px solid #d6d1d5;
+}
+
+input::placeholder {
+  font-size: 1.2em;
+  font-weight: lighter;
+  color: #bbb;
+}
+
+button {
+  width: 150px;
+  cursor: pointer;
+  margin-right: 0.25em;
+  margin-top: 0.5em;
+  padding: 	0.938em;
+  border: none;
+  border-radius: 4px;
+  background-color:#0269e8;
+  color: #fefefe;
+}
+button:hover {
+  background-color: pink;
+  color: #fefefe;
+}
+
+input.error {
+  border: 1px solid #EADAE4;
+}
+
+.error {
+  color:#db2269;
+  font-size: 0.625em;
+  display: relative;
+}
+
+.fullName {
+  margin-right: 1%;
+}
+
+.fullName,
+.email,
+.password {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+.fullName {
+  width: 100%;
+}
+
+.email,
+.password {
+  width: 100%;
+}
+
+.submit {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
