--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,23 @@ label {
   padding-top: 3em;
 
 }
+#checkout{
+  min-width: 20%;
+  cursor: pointer;
+  margin-left: 0.90em;
+  margin-top: 0.5em;
+  padding: 	0.938em;
+  border: none;
+  border-radius: 4px;
+  background-color: #0269e8;
+  color: #fefefe;
+  margin-bottom: 2em;
+}
+#checkout:hover {
+  background-color:black;
+  color: #fefefe;
+}
+
 
 
 input {
@@ -76,11 +93,27 @@ input::placeholder {
   font-weight: lighter;
   color: #bbb;
 }
-
-button {
+#back {
+  width: 150px;
+  height:40px;
+  cursor: pointer;
+  margin-right: 720px;
+  margin-top: -62px;
+  margin-bottom: 30px;
+  padding: 	0.938em;
+  border: none;
+  border-radius: 4px;
+  background-color:#0269e8;
+  color: #fefefe;
+}
+#back:hover {
+  background-color:black;
+  color: #fefefe;
+}
+#checkout {
   width: 150px;
   cursor: pointer;
-  margin-right: 0.25em;
+  margin-left: 700px;
   margin-top: 0.5em;
   padding: 	0.938em;
   border: none;
@@ -88,8 +121,8 @@ button {
   background-color:#0269e8;
   color: #fefefe;
 }
-button:hover {
-  background-color: pink;
+#checkout:hover {
+  background-color:black;
   color: #fefefe;
 }
 
@@ -103,33 +136,39 @@ input.error {
   display: relative;
 }
 
-.firstname {
+.fName {
   margin-right: 1%;
   margin-top: 2em;
 }
 
-.firstname,
+.fName,
 .email,
-.lastname,
+.lName,
 .pay,
 .phone {
   display: flex;
   flex-direction: column;
   margin-bottom: 15px;
+  text-align: center;
 }
-.firstname,
+/* .fName,
 .email,
-.lastname,
+.lName,
 .pay,
-.phone,
-.firstname{
+.phone {
   width: 100%;
-}
+} */
 
 /* .email,
 .password {
   width: 100%;
 } */
+.checkoutForm{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+  text-align: center;
+}
 
 .submit {
   width: 100%;
